--- a/portfolio-app/src/App.css
+++ b/portfolio-app/src/App.css
@@ -10,18 +10,42 @@ form input {
 }
 
 header {
-  font-size: 30px;
+  /* font-size: 30px; */
   color: rgb(40, 33, 33);
   background-image: url("./images/Wood-Texture1.jpg");
   background-size: 100%;
   background-position: center;
-  height: 100px;
+  border-bottom: 10px solid black;
+  text-align: center;
+  /* height: 100px; */
 }
 
 h1 {
-  color: blue;
+  color: black;
+  margin: 10px
 }
 
 .header {
-  margin-left: 20px;
+  /* margin-left: 20px; */
+  /* position: absolute; */
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.bio {
+  margin: 10px;
+}
+
+.myPic {
+  /* margin: 10px; */
+  max-width: 80%;
+  position: relative;
+  align-items: center;
+  margin: 0% 10% 5% 10%;
+  border: 10px solid rgb(45, 44, 44);
+  border-radius: 20px;
+}
+
+.myPicNone {
+  display: none;
 }
